<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mycalender.mycalender.AddEventActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="@dimen/paddingSmall">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingSmall"
            android:src="@mipmap/cross" />

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/paddingLarge"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:onClick="myFancyMethod"
            android:textSize="@dimen/tsStandard"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSave"
            android:background="@null"
            android:hint="@string/eventName"
            android:lines="1"
            android:padding="@dimen/paddingLarge"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/tsStandard" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/paddingStandard"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:onClick="myFancyMethod"
            android:layout_marginTop="@dimen/paddingSmall"
            android:layout_marginRight="@dimen/paddingStandard">

            <ImageView
                android:id="@+id/iv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/clock" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_date"
                android:layout_toEndOf="@id/iv_date"
                android:text="@string/date"
                android:textStyle="bold"
                android:textSize="@dimen/tsStandard" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/startTimeHint"
                android:textSize="@dimen/tsStandard" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/seperatorHeight"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingRight="@dimen/paddingStandard"
            android:onClick="myFancyMethod">

            <ImageView
                android:id="@+id/iv_startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/calender" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_startTime"
                android:layout_toEndOf="@id/iv_startTime"
                android:text="@string/startTime"
                android:textStyle="bold"
                android:textSize="@dimen/tsStandard" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/startTimeHint"
                android:textSize="@dimen/tsStandard" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/seperatorHeight"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:onClick="myFancyMethod"
            android:paddingRight="@dimen/paddingStandard">

            <ImageView
                android:id="@+id/iv_endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/calender" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_endTime"
                android:layout_toEndOf="@id/iv_endTime"
                android:text="@string/endTime"
                android:textStyle="bold"
                android:textSize="@dimen/tsStandard" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/endTimeHint"
                android:textSize="@dimen/tsStandard" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/seperatorHeight"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:onClick="myFancyMethod"
            android:paddingRight="@dimen/paddingStandard">

            <ImageView
                android:id="@+id/iv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_location"
                android:layout_toEndOf="@id/iv_location"
                android:text="@string/location"
                android:textStyle="bold"
                android:textSize="@dimen/tsStandard" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/locationHint"
                android:textSize="@dimen/tsStandard" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/seperatorHeight"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/paddingStandard"
            android:paddingRight="@dimen/paddingStandard"
            android:paddingTop="@dimen/paddingStandard"
            android:onClick="myFancyMethod">

            <ImageView
                android:id="@+id/iv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/notification" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_notification"
                android:layout_toEndOf="@id/iv_notification"
                android:text="@string/notifyMe"
                android:textStyle="bold"
                android:textSize="@dimen/tsStandard" />


            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/seperatorHeight"
            android:background="@color/black" />

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/paddingStandard"
            android:background="@drawable/edit_text_bg"
            android:layout_margin="@dimen/paddingStandard"
            android:lines="4"
            android:hint="@string/notes"
            android:maxLength="120"
            android:padding="@dimen/paddingNormal" />

    </LinearLayout>
</LinearLayout>